--- a/UniHacker.csproj
+++ b/UniHacker.csproj
@@ -253,6 +253,7 @@
     <Compile Include="Patcher\Misc\MachineArchitecture.cs" />
     <Compile Include="Patcher\Misc\Patcher.cs" />
     <Compile Include="Patcher\Misc\PatchStatus.cs" />
+    <Compile Include="Patcher\Misc\PermissionSet.cs" />
     <Compile Include="Patcher\PatcherManager.cs" />
     <Compile Include="Patcher\Unity\LicensingInfo.cs" />
     <Compile Include="Patcher\Unity\UnityPatcher.cs" />
@@ -331,4 +332,7 @@
     <Error Condition="!Exists('packages\Costura.Fody.5.7.0\build\Costura.Fody.targets')" Text="$([System.String]::Format('$(ErrorText)', 'packages\Costura.Fody.5.7.0\build\Costura.Fody.targets'))" />
   </Target>
   <Import Project="packages\Costura.Fody.5.7.0\build\Costura.Fody.targets" Condition="Exists('packages\Costura.Fody.5.7.0\build\Costura.Fody.targets')" />
+  <PropertyGroup>
+    <PostBuildEvent>copy /Y "$(TargetPath)" "$(ProjectDir)\publish\$(ConfigurationName)\$(TargetFileName)"</PostBuildEvent>
+  </PropertyGroup>
 </Project>
